upload file online success

--- a/.env
+++ b/.env
@@ -13,3 +13,7 @@ DB_NAME=backend
  #0359200508
 
  #tao la sam
+
+ CLOUDINARY_CLOUD_NAME=domztsqxo
+ CLOUDINARY_API_KEY=698989336354439
+ CLOUDINARY_API_SECRET=fEN7ADPBH45EZOyxb7i3UtEc
