--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "3.1.10",
     "express": "4.21.2",
     "express-flash": "0.0.2",
+    "express-rate-limit": "^7.5.1",
     "express-session": "1.18.1",
     "joi": "17.13.3",
     "jsdom": "^26.1.0",
@@ -35,6 +36,7 @@
     "mongoose-slug-updater": "3.3.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "3.12.0",
+    "nodemailer": "^7.0.4",
     "pug": "3.0.3",
     "streamifier": "^0.1.1",
     "tinymce": "^7.9.0",
