--- a/package.json
+++ b/package.json
@@ -39,10 +39,9 @@
     "nodemailer": "^7.0.4",
     "pug": "3.0.3",
     "streamifier": "^0.1.1",
+    "textbelt": "^0.0.4",
     "tinymce": "^7.9.0",
     "vnpay": "^2.4.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
   }
+  
 }
