--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "textbelt": "^0.0.4",
     "tinymce": "^7.9.0",
     "vnpay": "^2.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
-  
 }
