--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mysql2": "3.12.0",
     "nodemailer": "^7.0.4",
     "pug": "3.0.3",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "textbelt": "^0.0.4",
     "tinymce": "^7.9.0",
