--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dompurify": "^3.2.5",
     "dotenv": "16.4.7",
     "ejs": "3.1.10",
+    "emoji-picker-element": "^1.26.3",
     "express": "4.21.2",
     "express-flash": "0.0.2",
     "express-rate-limit": "^7.5.1",
